--- a/meson.build
+++ b/meson.build
@@ -31,14 +31,14 @@ _arl_list_gen_sources = custom_target('arl_list_generated_sources',
                                       output: [_arl_prefix_ + 'list.c', _arl_prefix_ + 'list.h'],
                                       command: [_prefix_script, arl_list_file, _arl_prefix, '@OUTDIR@'])
 
-message(get_option('arl_type'))
+add_global_arguments('-D' + _arl_prefix.to_upper() + '_VALUE_TYPE=' + get_option('arl_type'), language: 'c')
 
 arl_lib = library(_arl_prefix,
                   include_directories: c_lists_include,                       
                   sources: [arl_list_sources + _arl_list_gen_sources],
-                  c_args: [
-                    '-D' + _arl_prefix.to_upper() + '_VALUE_TYPE=' + get_option('arl_type'),
-                  ],
+                  # c_args: [
+                  #   '-D' + _arl_prefix.to_upper() + '_VALUE_TYPE=' + get_option('arl_type'),
+                  # ],
                   name_prefix: 'lib_')
 
 arl_lib_dep = declare_dependency(sources: _arl_list_gen_sources[1],
