Generate header dynamically to avoid name collisions (#13)
* Update README.md

* update code generation script

* add example

* add more examples

* merge errors to arl

* save progress

* update meson files

* update examples

* update fixes

* update examples

* update src docs

* update docs

* fix bugs

* regenerate type

* fix meson.build

--- a/meson.build
+++ b/meson.build
@@ -7,20 +7,40 @@ project('c_lists', 'c',
 	 default_options: [
            'werror=true',
            'c_std=c99',
-         ],
-       )
+         ])
 
 if get_option('enable_tests')
   add_project_arguments('-DENABLE_TESTS=1', language : 'c')
   add_project_arguments('-save-temps', language : 'c')    
 endif
 
+
+c_lists_include = [include_directories('include')]
+
+_prefix_script = find_program('scripts' / 'generate_sources.py')
+
 subdir('src')
-c_lists_include = include_directories('include')
 
-c_lists_lib = library('c_lists', sources, include_directories: c_lists_include)
+# ******************************************************************************
+# *    Array List
+# ******************************************************************************
+_arl_prefix = get_option('arl_prefix')
+_arl_prefix_ = _arl_prefix + '_'
 
-c_lists_dep = declare_dependency(link_with: c_lists_lib, include_directories: c_lists_include)
+_arl_list_gen_sources = custom_target('arl_list_generated_sources',
+                                      output: [_arl_prefix_ + 'list.c', _arl_prefix_ + 'list.h'],
+                                      command: [_prefix_script, arl_list_file,
+                                                _arl_prefix, get_option('arl_type'),
+                                                '@OUTDIR@'])
+
+arl_lib = library(_arl_prefix,
+                  include_directories: c_lists_include,                       
+                  sources: [arl_list_sources + _arl_list_gen_sources],
+                  name_prefix: 'lib_')
+
+arl_lib_dep = declare_dependency(sources: _arl_list_gen_sources[1],
+                                 link_with: arl_lib,
+                                 include_directories: arl_lib.private_dir_include())
 
 # ******************************************************************************
 # *    Tests
