--- a/src/interfaces/meson.build
+++ b/src/interfaces/meson.build
@@ -3,9 +3,10 @@ std_lib_interface_h = files(
 )
 
 interfaces_sources = files(
-   'cll_std_lib_interface.c', 
-) + std_lib_interface_h             
+   'cll_std_lib_interface.c'
+) + std_lib_interface_h
 
-common_sources += interfaces_sources
+arl_list_sources += interfaces_sources
 
-c_lists_dir += include_directories('.')
+c_lists_include += include_directories('.')
+c_lists_include += include_directories('..')
