--- a/test/test_ar_list.d/meson.build
+++ b/test/test_ar_list.d/meson.build
@@ -26,7 +26,7 @@ test_ar_list_exe = executable(test_name,
   c_args: ar_list_c_args
 )
 
-test(test_name, test_ar_list_exe)
+test(test_name, test_ar_list_exe, suite: 'test_arl')
 
 ################################################
 # TEST AR LIST LOGIC (void *)
@@ -49,7 +49,7 @@ test_ar_list_exe = executable(test_name,
   c_args: ar_list_c_args
 )
 
-test(test_name, test_ar_list_exe)
+test(test_name, test_ar_list_exe, suite: 'test_arl')
 
 ################################################
 # TEST AR LIST LOGIC (char)
@@ -74,7 +74,7 @@ test_ar_list_exe = executable(test_name,
   ]
 )
 
-test(test_name, test_ar_list_exe)
+test(test_name, test_ar_list_exe, suite: 'test_arl')
 
 ################################################
 # TEST OVERFLOW UTILS
@@ -96,7 +96,7 @@ test_overflow_exe = executable(test_overflow_utils_name,
   c_args: ar_list_c_args
 )
 
-test(test_overflow_utils_name, test_overflow_exe, suite: 'test_utils')
+test(test_overflow_utils_name, test_overflow_exe, suite: 'test_arl')
 
 
 ################################################
@@ -123,7 +123,7 @@ test_pointers_utils_exe = executable(test_pointers_utils_name,
 
 )
 
-test(test_pointers_utils_name, test_pointers_utils_exe, suite: 'test_utils')
+test(test_pointers_utils_name, test_pointers_utils_exe, suite: 'test_arl')
 
 ################################################
 # TEST ERRORS UTILS
@@ -145,7 +145,7 @@ test_l_error_exe = executable('test_errors_utils',
 )
 
 
-test('test_l_error', test_l_error_exe)
+test('test_l_error', test_l_error_exe, suite: 'test_arl')
 
 ################################################
 # TEST GENERATION SCRIPT
@@ -178,6 +178,5 @@ test_l_error_exe = executable('test_generation_script',
 )
 
 
-test('test_generation_script', test_l_error_exe)
-
+test('test_generation_script', test_l_error_exe, suite: 'test_arl')
 
